--- a/prueba2.html
+++ b/prueba2.html
@@ -1,1 +1,10 @@
-hola surmi
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
+	222
+</body>
+</html>
